# books

./: .gitignore  database.db  pyproject.toml
src/: database.db  main.py
src/api/: deps.py  routers.py
src/api/enpoints/: book.py  user.py
src/api/middleware/: auth.py
src/config/: settings.py
src/domain/auth/: user.py
src/domain/middleware/: auth.py
src/domain/models/: book.py  user.py
src/domain/schems/: book.py  user.py
src/domain/service/: book.py  user.py
src/infrastructure/database/repository/: book.py  user.py
